--- a/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
+++ b/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+		<PackageReference Include="Microsoft.OpenApi" Version="1.6.4" />
 	</ItemGroup>
 
 	<ItemGroup>
