--- a/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
+++ b/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
@@ -7,14 +7,11 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.4" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Data\" />
-	  <Folder Include="Extensions\" />
 	</ItemGroup>	
 
 </Project>
