--- a/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
+++ b/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
@@ -15,6 +15,15 @@
     <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Repositories\" />
   </ItemGroup>
 </Project>
