--- a/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
+++ b/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -10,15 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
