--- a/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
+++ b/HandsomePattern.Infrastructure/HandsomePattern.Infrastructure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -15,6 +15,8 @@
     <ProjectReference Include="..\HandsomePattern.Core\HandsomePattern.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Extensions\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 </Project>
