--- a/HandsomePattern/Properties/launchSettings.json
+++ b/HandsomePattern/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "HandsomePattern": {
       "commandName": "Project",
-      "commandLineArgs": "hola"
+      "commandLineArgs": "HandsomePattern"
     }
   }
 }
