ef core y insert de templates a db daleeeeeeeee

--- a/HandsomePattern/HandsomePattern.csproj
+++ b/HandsomePattern/HandsomePattern.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -12,12 +12,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Api\" />
+	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+	<PackageReference Include="Microsoft.OpenApi" Version="1.6.4" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
+    <ProjectReference Include="..\HandsomePattern.Infrastructure\HandsomePattern.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
